package ohm.softa.a02;

/**
 * @author Peter Kurfer
 * Created on 10/6/17.
 */
public class SimpleListImpl implements SimpleList {

	// TODO: Implement the required methods.

}
